Make immutable snapshot and stat labels
Signed-off-by: Artur Kugal <artur.kugal@swirldslabs.com>